tests/ui/lang/core/array/array_zst_0.stderr
error: this operation will panic at runtime
  --> $DIR/array_zst_0.rs:11:14
   |
11 |     let () = array[0];
   |              ^^^^^^^^ index out of bounds: the length is 0 but the index is 0
   |
   = note: `#[deny(unconditional_panic)]` on by default

error: aborting due to 1 previous error

